--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "next": "13.1.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "swr": "^2.0.2",
     "zustand": "^4.3.2"
   },
   "devDependencies": {
