--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "prod": "next build & next start"
+    "prod": "next build & next start",
+    "analyze": "set ANALYZE=true& next build"
   },
   "dependencies": {
     "@coreui/coreui": "^4.2.6",
@@ -30,6 +31,7 @@
     "zustand": "^4.3.2"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.1.5",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4"
