--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@next/font": "13.1.5",
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.3",
+    "apisauce": "^2.1.6",
+    "axios": "^1.2.5",
     "change-case": "^4.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
