--- a/package.json
+++ b/package.json
@@ -26,9 +26,13 @@
     "change-case": "^4.1.2",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
+    "immer": "^9.0.19",
     "next": "13.1.5",
+    "node-json-db": "^2.1.4",
+    "ramda": "^0.28.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-secure-storage": "^1.0.22",
     "swr": "^2.0.2",
     "zustand": "^4.3.2"
   },
