--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "apisauce": "^2.1.6",
     "axios": "^1.2.5",
     "change-case": "^4.1.2",
+    "crypto-js": "^4.1.1",
     "eslint": "8.32.0",
     "eslint-config-next": "13.1.5",
     "immer": "^9.0.19",
